add file operation

--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
     <label for="">十六进制数据转文本</label>
     <br/>
     <br/>
-    <input type="text" name="项目" value="请输入转换数据文件路径" />
-    <button>选择文件</button>
-    <button>转换</button>
-    <br/>
     <input type="file" name="文件" value="请输入转换数据文件路径" id="data"/>
-    <a href="#" onclick="load()">load</a>
+    <button onclick="load()">转换</button>
+    <label id="editor" contenteditable="true"></div>
   </div>
 
   <script type="text/javascript" src="data-related.js"></script>
