--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="hex2bin">
-    <label for="">文本十六进制数据</label>
+    <label for="">文本转十六进制数据</label>
     <br/>
     <br/>
     <input type="file" name="文件" value="请输入转换文本文件路径" id="data_text"/>
