--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <label id="editor_text" contenteditable="true"></div>
   </div>
 
+  <br/>
+  <br/>
+
+  <div class="calcrc">
+    <label for="">计算CRC</label>
+    <br/>
+    <br/>
+    <input type="file" name="文件" value="请输入计算CRC文件路径" id="data_crc_bin"/>
+    <button onclick="calCrc()">计算</button>
+    <label id="editor_file" contenteditable="true"></div>
+  </div>
+
   <script type="text/javascript" src="data-related.js"></script>
 </body>
 </html>
